--- a/index.html
+++ b/index.html
@@ -1,33 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>menna maged</title>
-  <link rel="icon" href="../images/free-love-2602951-2170603.webp">
-  <link rel="stylesheet" href="style.css"/>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200&family=Open+Sans&family=Poppins:ital,wght@0,400;0,600;1,400&display=swap');
-    </style>
-    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="./style.css">
+    <title>menna maged</title>
 </head>
-
-<body dir="ltr">
- <div class="flex-style">
-<header>
-  <img src="../images/logo.svg">
-  <p>kreed</p>
-  <button class="button">Login</button>
-</header>
-<div class="content">
-  <img src="../images/hero-section-picture.png">
-  <div class="content1">
-  <h1>Easy Payment for any business</h1>
-  <p>For ambitious companies around the world, wallet makes moving money as simple, borderless and programmable as the rest of the internet.</p>
-   <button class="get">Get Started</button>
-   </div>
-  </div>
-  </div>
+<body>
+    <div class="paragraph">
+    <p>First Name</p>
+    <p>Last Name</p>
+    <p>Age</p>
+</div>
 </body>
+<script src='./script.js'></script>
 </html>
